[package]
name = "todotxt"
version = "0.1.0"
authors = ["Zachary Golba <zachary.golba@postlight.com>"]
edition = "2015"

[dependencies]
nom = "4.0.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.2"

[dependencies.rayon]
optional = true
version = "1.0.1"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0.56"
